# ASC-bla

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  intro.html  searchindex.js  setup.py
_sources/: intro.md
demos/: CMakeLists.txt  demo_matrix.cpp  demo_vector.cpp  lapack_timing.cpp  matrix_timing.cpp  test_lapack.cpp
docs/: intro.md
py_demos/: demo_vector.py  timing_matmat.py
src/: bind_bla.cpp  lapack_interface.hpp  mat_simd.hpp  matrix.hpp  matrixexpr.hpp  matrixview.hpp  vecexpr.hpp  vector.hpp
